@@ -1,3 +1,9 @@
+May 23 2000 -	The "fix" re import on Apr 10 turned out to be a bug and
+		I put it back. But in the process found that the FLAG directives
+		were not read correctly - e.g. mere presence sometimes indicated
+		On. Also, ReportError was returning DONE in finally clause which 
+		was wrong.
+
 May 22 2000 -   The bug that was supposedly fixed below was a bit more 
 		complicated than it seemed at first. The fix below caused
 		a circular reference, and some further fixing had to be done,
